<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <POU Name="FB_Analysis" Id="56a21d61-526d-4edc-a52e-a26faa099f72" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Analysis
VAR_INPUT
	nConfigurationID: INT;
	ipVirtualInputSource: I_V1_VirtualInputSource;
	
END_VAR
VAR_OUTPUT
	bError: BOOL;
	ipTcResult: I_TcMessage := fbTcMsgSuccess;
END_VAR
VAR
	fbTcMsgSuccess: FB_TcMessageSuccess;
	
	R_TRIG_Reset: R_TRIG;
	bResetBusy: BOOL;
	
	fbN1_Network: FB_N1_Network;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="Reset" Id="e4492fc7-e5a7-4110-bfbc-873952f72057">
      <Declaration><![CDATA[METHOD Reset : BOOL
VAR_IN_OUT
	stReset: ST_AnalysisReset;
END_VAR
VAR
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
R_TRIG_Reset(CLK:= stReset.bResetExecute);
IF R_TRIG_Reset.Q OR bResetBusy THEN
	bResetBusy:= TRUE;

	CASE stReset.eResetComponent OF
		E_AnalysisComponents.All:
			bResetBusy:= bResetBusy AND fbN1_Network.Reset();
		E_AnalysisComponents.N1_Network:
			bResetBusy:= bResetBusy AND fbN1_Network.Reset();
		E_AnalysisComponents.N1_M1_PackMLOverallEquipmentEffectivenessOEE:
			bResetBusy:= bResetBusy AND fbN1_Network.fbM1_PackMLOverallEquipmentEffectivenessOEE.Reset();
		E_AnalysisComponents.N1_M2_ProductionTimingAnalysis1Ch:
			bResetBusy:= bResetBusy AND fbN1_Network.fbM2_ProductionTimingAnalysis1Ch.Reset();
		E_AnalysisComponents.N1_M3_PieChart:
			bResetBusy:= bResetBusy AND fbN1_Network.fbM3_PieChart.Reset();
		E_AnalysisComponents.N1_M4_ThresholdClassifier1Ch:
			bResetBusy:= bResetBusy AND fbN1_Network.fbM4_ThresholdClassifier1Ch.Reset();
		E_AnalysisComponents.N1_M5_PlasticMathOperation:
			bResetBusy:= bResetBusy AND fbN1_Network.fbM5_PlasticMathOperation.Reset();
		E_AnalysisComponents.N1_M6_PreventiveMaintenanceLifetimeAnalysis:
			bResetBusy:= bResetBusy AND fbN1_Network.fbM6_PreventiveMaintenanceLifetimeAnalysis.Reset();
		E_AnalysisComponents.V1_VirtualInputSource:
			bResetBusy:= bResetBusy AND fbN1_Network.fbM1_PackMLOverallEquipmentEffectivenessOEE.Reset();
			bResetBusy:= bResetBusy AND fbN1_Network.fbM2_ProductionTimingAnalysis1Ch.Reset();
			bResetBusy:= bResetBusy AND fbN1_Network.fbM3_PieChart.Reset();
			bResetBusy:= bResetBusy AND fbN1_Network.fbM4_ThresholdClassifier1Ch.Reset();
			bResetBusy:= bResetBusy AND fbN1_Network.fbM5_PlasticMathOperation.Reset();
			bResetBusy:= bResetBusy AND fbN1_Network.fbM6_PreventiveMaintenanceLifetimeAnalysis.Reset();
	END_CASE

	bResetBusy:= NOT bResetBusy;

	stReset.bResetExecute:= bResetBusy;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Call" Id="6056d5e5-73bc-4afd-a6c5-acf9bd777948">
      <Declaration><![CDATA[METHOD Call : BOOL
VAR
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
//Analytics Network "Network" with ID: 1
fbN1_Network.fInput_01:= fbN1_Network.fPlastic_Count;
fbN1_Network.Call(THIS);


//Error Handling
IF fbN1_Network.bError THEN
	bError:= TRUE;
	ipTcResult:= fbN1_Network.ipTcResult;
ELSE
	bError:= FALSE;
	ipTcResult:= fbTcMsgSuccess;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetHMIValues" Id="5aa9d32a-ce5e-4fac-b99c-2f7e3964ec9a">
      <Declaration><![CDATA[METHOD SetHMIValues : BOOL
VAR_INPUT
	nContentID: DINT;
	pContent: PVOID;
	bHMIReinit: BOOL;
END_VAR
VAR
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
CASE nContentID OF
	1:
		SetHMIValues:= fbN1_Network.fbM1_PackMLOverallEquipmentEffectivenessOEE.SetHMI(1, pContent, bHMIReinit);
		SetHMIValues:= SetHMIValues AND fbN1_Network.fbM3_PieChart.SetHMI(1, pContent, bHMIReinit);
		SetHMIValues:= SetHMIValues AND fbN1_Network.fbM4_ThresholdClassifier1Ch.SetHMI(1, pContent, bHMIReinit);
		SetHMIValues:= SetHMIValues AND fbN1_Network.fbM6_PreventiveMaintenanceLifetimeAnalysis.SetHMI(1, pContent, bHMIReinit);
		SetHMIValues:= SetHMIValues AND fbN1_Network.SetHMI(1, pContent, bHMIReinit);
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Method Name="GetHMIValues" Id="d03bdfd7-ce4a-47a5-94a0-cfdb628bb659">
      <Declaration><![CDATA[METHOD GetHMIValues : BOOL
VAR_INPUT
	nContentID: DINT;
	pContent: PVOID;
END_VAR
VAR
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
CASE nContentID OF
	1:
		GetHMIValues:= fbN1_Network.fbM1_PackMLOverallEquipmentEffectivenessOEE.GetHMI(1, pContent);
		GetHMIValues:= GetHMIValues OR fbN1_Network.fbM3_PieChart.GetHMI(1, pContent);
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Property Name="nContext" Id="b7929be4-7c2a-4109-87a7-4a46f5a64b0f">
      <Declaration><![CDATA[PROPERTY nContext : DWORD]]></Declaration>
      <Get Name="Get" Id="c1a2605f-329a-4abc-8bf3-5c3f776c7b97">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[
nContext:= 0;
IF ipVirtualInputSource <> 0 THEN
	nContext:= ipVirtualInputSource.nContext;
END_IF]]></ST>
        </Implementation>
      </Get>
    </Property>
  </POU>
</TcPlcObject>